--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,11 @@
 body {
   font-size: 120%;
   font-family: Arial;
+  background: rgb(210, 226, 255);
 }
 
-button, input {
+button,
+input {
   font-size: 100%;
   font-family: Arial;
 }
@@ -12,7 +14,8 @@ table {
   width: 100%;
 }
 
-td, th {
+td,
+th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
